--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@types/react-dom": "18.2.7",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "firebase": "^10.3.1",
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.46.1",
     "react-hooks": "^1.0.1",
     "react-icons": "^4.10.1",
     "tailwind-scrollbar": "^3.0.5",
